@@ -24,6 +24,18 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-framework-bom</artifactId>
+                <version>7.0.7</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
         <dependency>
             <groupId>org.json</groupId>
@@ -33,7 +45,6 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>7.0.7</version>
         </dependency>
         <dependency>
             <groupId>jakarta.annotation</groupId>
@@ -55,7 +66,6 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
-            <version>7.0.7</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -152,12 +162,10 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webflux</artifactId>
-            <version>7.0.7</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-websocket</artifactId>
-            <version>7.0.7</version>
         </dependency>
         <dependency>
             <groupId>io.projectreactor.netty</groupId>
@@ -221,7 +229,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.6</version>
                 <configuration>
-                    <argLine>--sun-misc-unsafe-memory-access=allow --add-opens=jdk.unsupported/sun.misc=ALL-UNNAMED -Dnet.bytebuddy.experimental=true -Dcomfyuicompanion.appdata=${project.build.directory}/temp-appdata</argLine>
+                    <argLine>--add-opens=jdk.unsupported/sun.misc=ALL-UNNAMED -Dnet.bytebuddy.experimental=true -Dcomfyuicompanion.appdata=${project.build.directory}/temp-appdata</argLine>
                 </configuration>
             </plugin>
 
